deploy/gitlab-dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: remmen-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
      app: remmen
