deploy/gitlab-dev/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: remmen-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
    - host: redesign.remmen.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remmen-service
              port:
                number: 80
  tls:
  - hosts:
    - redesign.remmen.io
    secretName: redesign-remmenteam-ch-tls
